# 6502-Emulator

./: CMakeLists.txt  README
src/: m6502.cpp  m6502.h  main.cpp  project_header.h
src/tests/: jump_return_tests.cpp  load_register_tests__extra.cpp  logical_tests.cpp  logical_tests.h  stack_operations_tests.cpp  store_register_tests.cpp
